// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with custom props 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span>
            Number of created alarms
          </span>
          <input
            autocomplete="off"
            name="customName"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="created_alarms,ratio_instructions"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-disabled="true"
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--disabled theme--light v-list-item--highlighted"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  disabled="disabled"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of created alarms
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--disabled theme--light"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  disabled="disabled"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of alarms with auto remediation
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  disabled="disabled"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of alarms with tickets created
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with default props 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <span>
            Number of created alarms
          </span>
          <input
            autocomplete="off"
            name="parameters"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="parameters"
          type="hidden"
          value="created_alarms"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--disabled theme--light v-list-item--highlighted"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input v-input--is-disabled theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  disabled="disabled"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of created alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of non-displayed alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of alarms under automatic remediation
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of alarms with PBehavior
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of alarms with correlation
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Total number of acks
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of canceled acks
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms with acks
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms with tickets
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms without tickets
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of correlated alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of alarms with auto remediation
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of alarms with tickets created
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of non-displayed alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          % of manually remediated alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Average time to ack alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Average time to resolve alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Minimum time to ack alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-input theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
            </div>
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Maximum time to ack alarms
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with external metrics 1`] = `
<div
  class="v-input theme--light v-text-field v-select v-select--is-multi v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            name="parameters"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="parameters"
          type="hidden"
          value="created_alarms,ratio_instructions"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with external metrics 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
  </div>
</div>
`;
